# SCoRe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bench.cpp  client.cpp  cmake_install.cmake  main.cpp
_old/: CMakeLists.txt  SCoRe.cbp  main.cpp  queue_config.h  queue_key.h  queue_type.cpp
_old/configs/: config_validator.py  config_x.json
_old/include/: config_generator_2.h  debug.h  reverse_trie_queue_node.h  reverse_trie_queue_node_config.h  reverse_trie_queue_node_key.h  s_queues.h  singleton.h
_old/src/: data_structures.cpp  reverse_trie_queue.cpp  reverse_trie_queue_node.cpp
_old/tests/: json_tester.cpp  reverse_triequeue_node_test.cpp  score.cpp  score_server.cpp
configs/: config_1.json  config_2.json  config_2_1.json  config_2_2.json  config_3.json  config_64.json  queuelist  t.json  tierlist
include/: Pythio.h  SCoRe.h  SCoReServer.h  config_generator.h  constants.h  daemonize.h  enum.h  mon_hooks.h  queue.h  queue_config.h  queue_key.h  queue_type.h  redis.h  reverse_trie_queue_node.h  reverse_trie_queue_node_config.h  s_queues.h
include/common/: data_structure.h  enumerations.h
include/common/queue/: queue.h  queue_config.h  queue_key.h  queue_type.h
include/score/common/: data_structure.h
include/score/common/queue/: Queue.h  README.md  redis.h
include/score/factVertex/: FactCollector.h  FactVertex.h  Pythio.h
include/score/insightVertex/: Insight.h  InsightCollector.h  InsightVertex.h
jarvis/: jarvis.py  requirements.txt
jarvis/jarvis_cd/: argument_parser.py  enumerations.py  graph.py  ssh_node.py
jarvis/repos/apollo/: default.ini  package.py
jarvis/repos/orangefs/: default.ini  package.py
old/: .gitignore  CMakeLists.txt  Makefile  SCoRe.kdev4  queue_misc  temp_package.py
old/.kdev4/: SCoRe.kdev4
old/configs/: clusterlist  config_1.json  config_gen.py  json_parser.ipynb  nodelist
old/include/: data_structures.h  enum.h  mon_hooks.h  queue.h  queue_key.h  queue_type.h  redis.h  reverse_trie_queue.h  s_queues.h  timer.h
old/include/nlohmann/: json.hpp
old/src/: SCoRe.cpp  debug.cpp  mon_hooks.cpp  s_queues.cpp  timer.cpp
old/tests/: queue_misc.cpp  queue_test.cpp  redis_test_other.cpp
scripts/: all.sh  dump.rdb  publish_concurrency_test.sh  publish_test.sh  publish_test_scale.sh  scale_redis_loops.sh  scale_test.sh  scale_test_stop.sh  subscribe_concrrency_test.sh  subscribe_test.sh  timing_test.sh
scripts/deployment/: apolloDeploy.sh
scripts/local_tests/: publish_test.sh
scripts/old_results/: publish_thread_test_1  publish_thread_test_16  publish_thread_test_2  publish_thread_test_31  publish_thread_test_4  publish_thread_test_8  subscribe_size_test  subscribe_thread_test
scripts/pfs_config/: client_lists  server_lists
scripts/results/: publish_thread_test  subscribe_redis_thread_test  timming_insight_vertex
scripts/results/comptue/: timming_fact_vertex
scripts/test_config/: hostfile  insight.conf  ldms.conf  redis_1.conf  redis_16.conf  redis_2.conf  redis_32.conf  redis_4.conf  redis_40.conf  redis_8.conf
scripts/test_config/apollo_configs/: 2_nodes  2_nodes.json  localhost_1  localhost_1.json  localhost_2  localhost_2.json
scripts/test_config/apollo_configs/1000_clients/: config.json
scripts/test_config/apollo_configs/120000_clients/: config.json
scripts/test_config/apollo_configs/15000_clients/: config.json
scripts/test_config/apollo_configs/16_clients/: client  config.json  fact  insight  redis
scripts/test_config/apollo_configs/1_clients/: client  config.json  fact  insight  redis
scripts/test_config/apollo_configs/250000_clients/: config.json
scripts/test_config/apollo_configs/2_clients/: client  config.json  insight  redis
scripts/test_config/apollo_configs/30000_clients/: config.json
scripts/test_config/apollo_configs/3000_clients/: config.json
scripts/test_config/apollo_configs/32_clients/: client  config.json  fact  insight  redis
scripts/test_config/apollo_configs/4_clients/: client  config.json  fact  redis
scripts/test_config/apollo_configs/500000_clients/: client  config.json
scripts/test_config/apollo_configs/500_clients/: config.json
scripts/test_config/apollo_configs/60000_clients/: config.json  fact  redis
scripts/test_config/apollo_configs/6000_clients/: config.json
scripts/test_config/apollo_configs/8_clients/: client  config.json  fact  insight  redis
scripts/test_config/apollo_configs/default/: client  config.json  insight
scripts/test_config/apollo_configs/layer_1/: client  config.json
scripts/test_config/apollo_configs/layer_16/: client  config.json  insight
scripts/test_config/apollo_configs/layer_2/: client  config.json  insight
scripts/test_config/apollo_configs/layer_32/: client  config.json  insight
scripts/test_config/apollo_configs/layer_4/: config.json  fact  insight
scripts/test_config/apollo_configs/layer_8/: client  config.json  insight
scripts/test_config/apollo_configs/layer_test/: client  config.json
scripts/test_config/apollo_configs/ldms_16_clients/: client  config.json  fact  insight  redis
scripts/test_config/apollo_configs/ldms_1_clients/: client  config.json  fact  insight  redis
scripts/test_config/apollo_configs/ldms_2_clients/: client  fact  (+3 more)
src/: Pythio.cpp  SCoRe.cpp  config_generator.cpp  daemonize.cpp  mon_hooks.cpp  queue.cpp  queue_config.cpp  queue_key.cpp  queue_type.cpp  redis.cpp  reverse_trie_queue_node.cpp  reverse_trie_queue_node_config.cpp  reverse_trie_queue_node_key.cpp  s_queues.cpp
src/common/queue/: Queue.cpp  queue.cpp  queue_config.cpp  queue_key.cpp  queue_type.cpp  redis.cpp
src/score/factVertex/: FactCollector.cpp  FactVertex.cpp  Pythio.cpp  main.cpp
src/score/insightVertex/: InsightCollector.cpp  InsightVertex.cpp  main.cpp
test/: CMakeLists.txt
test/common/queue/: queue_misc.cpp  queue_test.cpp  redis_test.cpp  redis_test_other.cpp
tests/: Makefile  client_test.cpp  json_tester.cpp  ldms_client.cpp  publish_test.cpp  queue_test.cpp  real_client.cpp  redis_test.cpp  reverse_trie_queue_test.cpp  score.cpp  score_server.cpp  subscribe_test.cpp  subscribe_test_2.cpp
(+23 files in other folders)
